feat: 初始化 Android 移動版專案結構
- 添加 Capacitor 配置和 npm package.json
- 創建移動版目錄結構 (mobile/)
- 實現廣告管理系統基礎架構
- 創建詳細的 Android 發布計劃 (ANDROID_RELEASE_TODO.md)
- 更新 .gitignore 排除 Android 構建文件

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ coverage-report.*
 performance-report.*
 analysis-report.*
 
-# Node.js (如果未來要加入建構工具)
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -66,6 +66,12 @@ yarn-error.log*
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+# Capacitor / Android
+android/
+ios/
+.capacitor/
+capacitor-cordova-android-plugins/
 
 # 建構輸出 (如果未來要加入建構流程)
 dist/
